[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/door_special.png" type="Texture" id=1]
[ext_resource path="res://objects/DoorSpecial.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "open"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("door_special_up:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("door_gem:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("door_gem:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.4, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("door_special_up:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -24 ), Vector2( 8, -48 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("door_special_down:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -24 ), Vector2( 8, 0.37 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("door_special_up/Body/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("door_special_down/Body/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "opened"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("door_special_up:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("door_gem:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("door_gem:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("door_special_up:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -48 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("door_special_down:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0.37 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("door_special_up/Body/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("door_special_down/Body/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 19 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 40 )

[node name="DoorSpecial" type="Node2D" groups=[
"special_door",
]]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/open = SubResource( 1 )
anims/opened = SubResource( 2 )

[node name="door_special_up" type="Sprite" parent="."]
position = Vector2( 8, -24 )
scale = Vector2( 1, -1 )
z_index = -1
texture = ExtResource( 1 )
hframes = 6
frame = 2
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="StaticBody2D" parent="door_special_up"]
collision_layer = 8
collision_mask = 53

[node name="CollisionShape2D" type="CollisionShape2D" parent="door_special_up/Body"]
modulate = Color( 1, 1, 1, 0.403922 )
position = Vector2( 0, 19 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="door_special_down" type="Sprite" parent="."]
position = Vector2( 8, -24 )
z_index = -1
texture = ExtResource( 1 )
hframes = 6
frame = 2
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="StaticBody2D" parent="door_special_down"]
scale = Vector2( 1, -1 )
collision_layer = 8
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="door_special_down/Body"]
modulate = Color( 1, 1, 1, 0.403922 )
position = Vector2( 0, -19 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="door_gem" type="Sprite" parent="."]
position = Vector2( 8, -24 )
z_index = -1
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="Area2D" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
z_index = -2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, -24 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="tree_exiting" from="." to="." method="_on_DoorSpecial_tree_exiting"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
